--- a/functions.ipynb
+++ b/functions.ipynb
@@ -38,7 +38,8 @@
     "        prod = prod * i\n",
     "    return prod\n",
     "\n",
-    "multiply(1,2,3,4,5)"
+    "multiply(1,2,3,4,5)\n",
+"# args allows us to pass any number of arguments"
    ]
   },
   {
